--- a/client/app/components/authentication/login/login.component.html
+++ b/client/app/components/authentication/login/login.component.html
@@ -12,9 +12,10 @@
             <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
         </div>
         <div class="form-group">
-            <button [disabled]="loading" class="btn btn-primary">Login</button>
+            <button *ngIf="!loggedIn" class="btn btn-primary">Login</button>
             <!--<img *ngIf="loading" src="" />-->
             <a [routerLink]="['/register']" class="btn btn-link">Register</a>
         </div>
     </form>
+    <button *ngIf="isLoggedIn" (click)="logOut()" class="btn btn-primary">Log Out</button>
 </div>
