--- a/client/app/components/authentication/login/login.component.html
+++ b/client/app/components/authentication/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="col-md-6 col-md-offset-3">
     <h2>Login</h2>
+    <alert></alert>
     <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
             <label for="username">Username</label>
@@ -17,5 +18,4 @@
             <a [routerLink]="['/register']" class="btn btn-link">Register</a>
         </div>
     </form>
-    <button *ngIf="isLoggedIn" (click)="logOut()" class="btn btn-primary">Log Out</button>
 </div>
