project detail (refactor edit)

--- a/client/app/components/projects/projects.component.html
+++ b/client/app/components/projects/projects.component.html
@@ -14,7 +14,7 @@
             <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Symbol</th>
+                    <th>Project Utility Token Symbol</th>
                 </tr>
             </thead>
             <tbody>
