--- a/client/app/components/projectDetail/project-detail.component.html
+++ b/client/app/components/projectDetail/project-detail.component.html
@@ -1,21 +1,28 @@
 <div *ngIf="project" class="form-horizontal">
-    <h2>{{project.name}} details</h2>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Name: </label>
-        <div class="col-sm-10">
-            <input class="form-control" [(ngModel)]="project.name" placeholder="name" />
+    <h2>
+        {{project.name}} ({{project.utilityTokenSymbol | uppercase}})
+        <button *ngIf="!editMode" (click)="toggleEditMode()" type="button" class="btn btn-default" aria-label="Edit">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button>
+        <button *ngIf="editMode" (click)="save()" type="button" class="btn btn-default" aria-label="Save">
+            <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+        </button>
+        <button *ngIf="editMode" (click)="cancel()" type="button" class="btn btn-default" aria-label="Cancel">
+            <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
+        </button>
+    </h2>
+    <div *ngIf="editMode">
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Name: </label>
+            <div class="col-sm-10">
+                <input class="form-control" [(ngModel)]="project.name" placeholder="name" />
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Symbol: </label>
-        <div class="col-sm-10">
-            <input class="form-control" [(ngModel)]="project.utilityTokenSymbol" placeholder="symbol" />
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button (click)="goBack()" class="btn btn-default">Back</button>
-            <button (click)="save()" class="btn btn-primary">Save</button>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Symbol: </label>
+            <div class="col-sm-10">
+                <input class="form-control" [(ngModel)]="project.utilityTokenSymbol" placeholder="name" />
+            </div>
         </div>
     </div>
 </div>
