projects dashboard is main projects page now; project details will have features dashboard as a child component

--- a/client/app/components/_common/login-nav/login-nav.component.html
+++ b/client/app/components/_common/login-nav/login-nav.component.html
@@ -10,8 +10,7 @@
 	</div>
 	<div class="collapse navbar-collapse navbar-menu-collapse">
 		<ul class="nav navbar-nav navbar-right">
-			<li class="active"><a routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
-			<li class="active"><a routerLink="/projects" routerLinkActive="active">Projects</a></li>
+			<li class="active"><a routerLink="/projects-dashboard" routerLinkActive="active">Projects</a></li>
 			<li *ngIf="!isLoggedIn" class="active"><a routerLink="/login" routerLinkActive="active">Login</a></li>
 			<li *ngIf="isLoggedIn" class="active"><a (click)="logout()" style="cursor: pointer">Logout</a></li>
 		</ul>
