--- a/client/app/components/features-dashboard/features-dashboard.component.html
+++ b/client/app/components/features-dashboard/features-dashboard.component.html
@@ -1,1 +1,9 @@
-this is the features dashboard...
+<h3>Features</h3>
+<div class="row">
+    <div *ngFor="let feature of features" (click)="gotoDetail(feature)" class="col-md-3">
+        <div class="module feature">
+            <h4>{{feature.name}}</h4>
+            <h5>{{feature.pledgeTotal}}</h5>
+        </div>
+    </div>
+</div>
