few minutes to work on feature detail page (not working yet)

--- a/client/app/components/features-dashboard/features-dashboard.component.html
+++ b/client/app/components/features-dashboard/features-dashboard.component.html
@@ -1,4 +1,9 @@
-<h3>Features</h3>
+<h3>
+    Features
+    <button (click)="addFeature()" type="button" class="btn btn-default" aria-label="Add">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+    </button>
+</h3>
 <div class="row">
     <div *ngFor="let feature of features" (click)="gotoDetail(feature)" class="col-md-3">
         <div class="module feature">
